--- a/app/src/main/res/layout/widget_lock.xml
+++ b/app/src/main/res/layout/widget_lock.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/bright_display_btn"
+    android:id="@+id/lock_btn"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:src="@drawable/ic_launcher_tile"/>
