--- a/app/src/main/res/layout/widget_lock.xml
+++ b/app/src/main/res/layout/widget_lock.xml
@@ -3,4 +3,6 @@
     android:id="@+id/lock_btn"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:scaleX="2"
+    android:scaleY="2"
     android:src="@drawable/ic_launcher_tile"/>
