--- a/app/src/main/res/layout/widget_lock.xml
+++ b/app/src/main/res/layout/widget_lock.xml
@@ -5,4 +5,5 @@
     android:layout_height="wrap_content"
     android:scaleX="2"
     android:scaleY="2"
+    android:translationY="-10dp"
     android:src="@drawable/ic_launcher_tile"/>
